--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,12 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: #ffffffde;
+  background: radial-gradient(circle at 20% 30%, #8d2d67 0%, transparent 40%),
+    radial-gradient(circle at 80% 40%, #4d4a91 0%, transparent 40%),
+    radial-gradient(circle at 40% 80%, #1a3131 0%, transparent 50%);
   background-color: #242424;
+  background-blend-mode: screen;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -34,7 +38,8 @@ body {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #182633;
+  color: aliceblue;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -55,7 +60,7 @@ body {
   margin: 0 auto;
   margin-bottom: 2rem;
   width: fit-content;
-  filter: drop-shadow(#4c4cac 0 0 5rem);
+  filter: drop-shadow(#4c4cac 0 0 2rem);
 }
 
 .filter-search-body {
@@ -68,6 +73,7 @@ body {
   border-bottom: 3px solid darkmagenta;
   border-radius: 0.2rem;
   background-color: transparent;
+  color: aliceblue;
 }
 .filter-search-body input:focus {
   outline: none;
@@ -75,11 +81,12 @@ body {
   background-color: #213547;
 }
 
-.filter-form .sort {
-  background-color: #1a1a1a;
+.filter-form .btn-sort {
+  /* background-color: #1a1a1a; */
   border-radius: 0.8rem;
   width: 8rem;
   height: 100%;
+  /* color: aliceblue; */
 }
 
 .card-array {
@@ -118,7 +125,7 @@ body {
 .card-body hr {
   border: none;
   height: 2px;
-  background-color: black;
+  background-color: #1b2b3a;
   border-radius: 1px;
 }
 
@@ -135,16 +142,16 @@ body {
 }
 
 .email {
-  background-color: #242424;
+  background-color: #1b2c3a;
   border-radius: 0.3rem;
   padding: 0.5rem;
   margin: 0;
 }
 
-button.fav {
-  border: 1px transparent;
+.btn-fav {
   font-size: 2rem;
   padding: 0rem 0.5rem;
+  padding-bottom: 0.3rem;
   margin-top: 0.3rem;
   background-color: transparent;
 }
@@ -152,18 +159,29 @@ button.fav {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: lightblue;
+    background: radial-gradient(circle at 20% 30%, #ff6ec4 0%, transparent 40%),
+      radial-gradient(circle at 80% 40%, #7873f5 0%, transparent 40%),
+      radial-gradient(circle at 50% 80%, #4adede 0%, transparent 40%);
+    background-color: #ecd4d4;
+    background-blend-mode: screen;
   }
+
   a:hover {
     color: #747bff;
   }
+
   .btn {
-    color: #333;
+    color: black;
     background-color: #ddd;
   }
 
   .filter-form {
     background-color: white;
+    filter: drop-shadow(#eeeefd 0 0 2rem);
+  }
+
+  .btn-fav {
+    background-color: transparent;
   }
 
   .user-card .card-body {
@@ -172,5 +190,30 @@ button.fav {
 
   .card-body hr {
     background-color: lightgray;
+  }
+
+  .email {
+    background-color: #ddd;
+  }
+
+  .filter-form {
+    background-color: #ecd2d2;
+  }
+
+  .filter-search-body {
+    background-color: white;
+  }
+
+  .filter-search-body input {
+    color: black;
+    border-bottom: 3px solid #ce7373;
+  }
+  .filter-search-body input:focus {
+    outline: none;
+    border-bottom: 3px solid aqua;
+    background-color: lightcyan;
+  }
+  .btn-sort {
+    background-color: #f5e3ea;
   }
 }
