--- a/src/style.css
+++ b/src/style.css
@@ -22,14 +22,26 @@ body {
   min-width: 320px;
 }
 
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  padding: 0 calc(100% / 8);
+  background-color: #6a3a57;
+  filter: drop-shadow(#6a3a57 -2px 2px 10px);
+}
+
 footer {
   max-height: 10rem;
 }
 
 #app {
+  width: fit-content;
   max-width: 60rem;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 4rem auto;
+  padding: 2rem calc(100% / 8);
   min-height: calc(100vh - 18rem);
 }
 
@@ -95,7 +107,7 @@ footer {
   flex-wrap: wrap;
   gap: 1rem;
   padding: 0;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   width: 56rem;
 }
 
@@ -186,6 +198,11 @@ footer {
       radial-gradient(circle at 50% 80%, #4adede 0%, transparent 40%);
     background-color: #ecd4d4;
     background-blend-mode: screen;
+  }
+
+  header {
+    background-color: #e47375;
+    filter: drop-shadow(#e47375 -2px 2px 10px);
   }
 
   a:hover {
